Fix casing typos in NuGet and MSBuild

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -178,7 +178,7 @@ jobs:
       - RnwNpmPublish
       - RnwNativeBuildDesktop
       - RnwNativeBuildUniversal
-    displayName: Publish Nuget
+    displayName: Publish NuGet
     pool:
       vmImage: $(VmImage)
 
