--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,9 @@
 {
-  "packages": ["packages/*", "vnext"],
+  "packages": [
+    "packages/*",
+    "packages/@rnw-scripts/*",
+    "vnext"
+  ],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "0.0.0"
