--- a/vnext/.flowconfig
+++ b/vnext/.flowconfig
@@ -5,7 +5,7 @@
 .*/*[.]macos.js
 .*/*[.]windesktop.js
 
-; These modules have base components and windows versions.
+; These modules have base components and Windows versions.
 ; Ideally we'd delete the base versions of files that had .windows overrides as part of the
 ; initRNLibraries build step
 <PROJECT_ROOT>/Libraries/Alert/Alert.js
