Keep Pipeline Schedules in Sync

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -6,18 +6,19 @@ variables:
   - template: variables/vs2019.yml
 
 schedules:
-- cron: "0 0 * * *"
-  displayName: Nightly publish build
+- cron: "0 5 * * *" # 5AM Daily UTC (10PM Daily PST)
+  displayName: Nightly master publish build
   branches:
     include:
-    - master
+      - master
 
-trigger:
-  batch: true
+- cron: "0 5 * * 1" # 5AM Monday UTC (10PM Sunday PST)
+  displayName: Weekly stable publish build
   branches:
     include:
       - "*-stable"
 
+trigger: none
 pr: none
 
 jobs:
