--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -262,9 +262,16 @@ jobs:
             /p:PlatformToolset=$(MSBuildPlatformToolset)
             /p:BaseIntDir=$(BaseIntDir)
 
-      - powershell: |
-            gci -Recurse packages/playground/windows/
-        displayName: List playground folder
+      - powershell: .ado/TestWACK.ps1 $(BuildPlatform) $(BuildConfiguration) $(Build.StagingDirectory)/WACK
+        displayName: Test WACK
+
+      - task: PublishBuildArtifacts@1
+        displayName: Upload WACK report
+        condition:  succeededOrFailed()
+        inputs:
+          pathtoPublish: '$(Build.StagingDirectory)/WACK'
+          artifactName: 'WACK report $(BuildPlatform) $(BuildConfiguration)'
+
 
       - task: NuGetCommand@2
         displayName: NuGet restore - Playground Win32
