Don't Git Tag New Releases

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -48,7 +48,7 @@ jobs:
       - task: CmdLine@2
         displayName: Beachball Publish
         inputs:
-          script: node ./node_modules/beachball/bin/beachball.js publish --branch origin/$(Build.SourceBranchName) -n $(npmAuthToken) -yes -m "applying package updates ***NO_CI***" --bump-deps  --access public
+          script: node ./node_modules/beachball/bin/beachball.js publish --branch origin/$(Build.SourceBranchName) -n $(npmAuthToken) -yes -m "applying package updates ***NO_CI***" --bump-deps  --access public --no-git-tags
 
       - task: CmdLine@2
         displayName: Set Version Env Vars
