Fix casing typos in NuGet and MSBuild (#5358)
* Fix casing typos in NuGet and MSBuild

* Change files

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -179,7 +179,7 @@ jobs:
       - RnwNpmPublish
       - RnwNativeBuildDesktop
       - RnwNativeBuildUniversal
-    displayName: Publish Nuget
+    displayName: Publish NuGet
     pool:
       vmImage: $(VmImage)
 
