Call AppPolicyGetWindowingModel dynamically since it's WACK-banned

--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj.filters
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj.filters
@@ -661,6 +661,9 @@
     <ClInclude Include="Utils\Helpers.h">
       <Filter>Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Utils\ManagedResource.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
     <ClInclude Include="Utils\LocalBundleReader.h">
       <Filter>Utils</Filter>
     </ClInclude>
