--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
@@ -302,6 +302,7 @@
     <ClInclude Include="Utils\AccessibilityUtils.h" />
     <ClInclude Include="Utils\CppWinrtLessExceptions.h" />
     <ClInclude Include="Utils\Helpers.h" />
+    <ClInclude Include="Utils\ManagedResource.h" />
     <ClInclude Include="Utils\LocalBundleReader.h" />
     <ClInclude Include="Utils\PropertyHandlerUtils.h" />
     <ClInclude Include="Utils\PropertyUtils.h" />
