Remove Include/ReactUWP files (#5360)
* Remove Include/ReactUWP files

* Change files

* Fix React.Windows.Desktop compilation

* Remove the ReactRootView2.h file

--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
@@ -263,6 +263,8 @@
     <ClInclude Include="Polyester\ContentControlViewManager.h" />
     <ClInclude Include="Polyester\HyperlinkViewManager.h" />
     <ClInclude Include="Polyester\IconViewManager.h" />
+    <ClInclude Include="ReactHost\IReactInstance.h" />
+    <ClInclude Include="ReactHost\ViewManagerProvider.h" />
     <ClInclude Include="TurboModulesProvider.h" />
     <ClInclude Include="Pch\pch.h" />
     <ClInclude Include="ReactApplication.h">
@@ -326,6 +328,7 @@
     <ClInclude Include="Views\Image\ReactImageBrush.h" />
     <ClInclude Include="Views\Impl\ScrollViewUWPImplementation.h" />
     <ClInclude Include="Views\Impl\SnapPointManagingContentControl.h" />
+    <ClInclude Include="Views\IXamlRootView.h" />
     <ClInclude Include="Views\KeyboardEventHandler.h" />
     <ClInclude Include="Views\PickerViewManager.h" />
     <ClInclude Include="Views\PopupViewManager.h" />
