Share eslint and Typescript configs across packages
We create rnw-scripts packages which export a typescript config and an eslint config. We can change individual packages to import these. We pull in a newer version of esling (and add is as a devDep to all packages), letting us include eslintignore rules in the base eslintrc.

This also leads to enforcing strict mode for all Typescript projects, enabling eslint for react-native-win32, react-native-windows-init (fixing some errors and suppressing other parts that aren't clean). ES6 module behavior also changed slightly for some projects.

--- a/packages/@rnw-scripts/create-github-releases/package.json
+++ b/packages/@rnw-scripts/create-github-releases/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "semver": "^7.3.2",
+    "simple-git": "^1.131.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/node-fetch": "^2.5.7",
     "@types/semver": "^7.3.1",
     "@types/yargs": "^15.0.5",
+    "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
   },
