--- a/vnext/tsconfig.json
+++ b/vnext/tsconfig.json
@@ -14,10 +14,7 @@
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "strict": true,
-    "rootDir": "src",
-    "paths": {
-      "react-native-windows": ["src/Libraries/react-native/typings-index"] // This mapping is relative to "baseUrl"
-    }
+    "rootDir": "src"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "lib"]
