--- a/packages/@rnw-scripts/promote-release/package.json
+++ b/packages/@rnw-scripts/promote-release/package.json
@@ -23,7 +23,7 @@
     "glob": "^7.1.6",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.15",
-    "simplegit": "^1.0.2",
+    "simple-git": "^1.131.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
@@ -32,6 +32,7 @@
     "@types/js-yaml": "^3.12.5",
     "@types/lodash": "^4.14.157",
     "@types/yargs": "^15.0.5",
+    "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
   },
