--- a/packages/@rnw-scripts/promote-release/tsconfig.json
+++ b/packages/@rnw-scripts/promote-release/tsconfig.json
@@ -1,16 +1,5 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "target": "es6",
-        "sourceMap": true,
-        "declaration": true,
-        "strict": true,
-        "preserveConstEnums": true,
-        "moduleResolution": "node",
-        "noUnusedLocals": true,
-        "skipLibCheck": true,
-        "rootDirs": ["src"],
-    },
-    "include": ["src"],
-    "exclude": ["node_modules"]
+  "extends": "@rnw-scripts/ts-config",
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
