--- a/packages/E2ETest/tsconfig.json
+++ b/packages/E2ETest/tsconfig.json
@@ -1,25 +1,11 @@
 {
+  "extends": "@rnw-scripts/ts-config",
   "compilerOptions": {
-    "baseUrl": ".",
-    "target": "es6",
-    "module": "commonjs",
-    "jsx": "react",
     "outDir": "dist",
-    "declaration": true,
-    "sourceMap": true,
-    "noEmitOnError": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "noEmit": false,
-    "noUnusedLocals": true,
-    "strict": true,
-    "rootDir": ".",
     "esModuleInterop": true,
     "types": [
       "@wdio/sync",
-      "@wdio/jasmine-framework",
-      "@types/jasmine",
-      "node"
+      "@wdio/jasmine-framework"
     ]
   },
   "include": [
