--- a/packages/react-native-windows-codegen/package.json
+++ b/packages/react-native-windows-codegen/package.json
@@ -23,6 +23,9 @@
     "yargs": "^15.1.0"
   },
   "devDependencies": {
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/just-task": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/chalk": "^2.2.0",
     "@types/globby": "^9.1.0",
     "@types/yargs": "^15.0.3",
