--- a/packages/@rnw-scripts/find-repo-root/package.json
+++ b/packages/@rnw-scripts/find-repo-root/package.json
@@ -19,6 +19,9 @@
     "find-up": "^4.1.0"
   },
   "devDependencies": {
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/just-task": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/find-up": "^4.0.0",
     "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
