--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -30,6 +30,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/jasmine": "2.8.7",
     "@types/node": "^10.14.8",
     "@types/react": "16.9.0",
