--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
     "eslint": "6.7.0",
