--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@office-iss/rex-win32": "0.62.0-preview.16-tenantreactnativewin-13017.2",
+    "@rnw-scripts/eslint-config": "0.0.0",
     "@types/es6-collections": "^0.5.29",
     "@types/es6-promise": "0.0.32",
     "@types/node": "^12.11.2",
