Better tsconfig defaults
- Preserve JSX (Metro will do the right thing with it)
- Enable noImplicitReturns which isn't enabled by default by strict
- Fix error in react-native-windows-codegen that noImplicitReturns foumd

--- a/packages/@rnw-scripts/ts-config/tsconfig.json
+++ b/packages/@rnw-scripts/ts-config/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "jsx": "react",
+    "jsx": "preserve",
     "sourceMap": true,
     "declaration": true,
     "strict": true,
     "preserveConstEnums": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
+    "noImplicitReturns": true,
     "skipLibCheck": true,
   }
 }
