--- a/packages/@rnw-scripts/ts-config/tsconfig.json
+++ b/packages/@rnw-scripts/ts-config/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "module": "commonjs",
     "jsx": "preserve",
     "sourceMap": true,
     "declaration": true,
