--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -23,22 +23,24 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "abort-controller": "^3.0.0",
+    "anser": "^1.4.9",
     "art": "^0.10.0",
     "base64-js": "^1.1.2",
-    "create-react-class": "^15.6.3",
     "event-target-shim": "^5.0.1",
-    "fbjs": "^1.0.0",
     "fbjs-scripts": "^1.1.0",
+    "fbjs": "^1.0.0",
     "invariant": "^2.2.4",
     "nullthrows": "^1.1.0",
     "pretty-format": "^24.7.0",
     "promise": "^7.1.1",
     "prop-types": "^15.7.2",
     "react-clone-referenced-element": "^1.0.1",
-    "react-devtools-core": "^3.6.0",
+    "react-devtools-core": "^4.0.6",
+    "react-refresh": "^0.4.0",
     "regenerator-runtime": "^0.13.2",
     "scheduler": "0.14.0",
     "stacktrace-parser": "^0.1.3",
+    "use-subscription": "^1.0.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
