--- a/vnext/package.json
+++ b/vnext/package.json
@@ -23,19 +23,30 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
+    "abort-controller": "^3.0.0",
+    "anser": "^1.4.9",
+    "base64-js": "^1.1.2",
     "cli-spinners": "^2.2.0",
-    "create-react-class": "^15.6.3",
     "envinfo": "^7.5.0",
+    "event-target-shim": "^5.0.1",
+    "fbjs-scripts": "^1.1.0",
     "fbjs": "^1.0.0",
     "glob": "^7.1.1",
+    "invariant": "^2.2.4",
     "mustache": "^4.0.1",
+    "nullthrows": "^1.1.1",
     "ora": "^3.4.0",
+    "pretty-format": "^24.9.0",
     "prop-types": "^15.7.2",
+    "react-devtools-core": "^4.0.6",
     "regenerator-runtime": "^0.13.2",
     "semver": "^7.1.3",
     "shelljs": "^0.7.8",
+    "stacktrace-parser": "^0.1.3",
+    "use-subscription": "^1.0.0",
     "username": "^5.1.0",
     "uuid": "^3.3.2",
+    "whatwg-fetch": "^3.0.0",
     "xml-parser": "^1.2.1",
     "xmldom": "^0.3.0",
     "xpath": "^0.0.27"
@@ -56,6 +67,7 @@
     "just-scripts": "^0.36.1",
     "prettier": "1.17.0",
     "react": "16.13.0",
+    "react-refresh": "^0.4.0",
     "react-native-windows-codegen": "0.0.7",
     "react-native-platform-override": "^0.0.7",
     "react-native": "0.0.0-56cf99a96",
