--- a/vnext/tsconfig.json
+++ b/vnext/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "target": "es6",
     "module": "commonjs",
-    "jsx": "react",
+    "jsx": "react-native",
     "outDir": ".",
     "declaration": true,
     "declarationMap": true,
