Run WACK in CI (#5365)
* create playground package in CI

* update cert

* remove thumbprint check

* Run WACK

* no appx bundling

* parse wack report

* exception for __C_specific_handler for now

* mkdir outputpath

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -261,7 +261,17 @@ jobs:
             /p:PreferredToolArchitecture=$(MSBuildPreferredToolArchitecture)
             /p:PlatformToolset=$(MSBuildPlatformToolset)
             /p:BaseIntDir=$(BaseIntDir)
-            /p:AppxPackageSigningEnabled=false
+
+      - powershell: .ado/TestWACK.ps1 $(BuildPlatform) $(BuildConfiguration) $(Build.StagingDirectory)\WACK
+        displayName: Test WACK
+
+      - task: PublishBuildArtifacts@1
+        displayName: Upload WACK report
+        condition:  succeededOrFailed()
+        inputs:
+          pathtoPublish: '$(Build.StagingDirectory)/WACK'
+          artifactName: 'WACK report $(BuildPlatform) $(BuildConfiguration)'
+
 
       - task: NuGetCommand@2
         displayName: NuGet restore - Playground Win32
