Codesign Microsoft.ReactNative binaries and nuget package
* Added Microsoft.ReactNative.SignConfig.xml for binary signing
* Added Microsoft.ReactNative.NugetSignConfig.xml for nuget signing
* Updated publish.yml to move nuget creation onto Package ES machines
* Added optional signing tasks to prep-and-pack-nuget.yml

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -182,12 +182,19 @@ jobs:
       - RnwNpmPublish
       - RnwNativeBuildDesktop
       - RnwNativeBuildUniversal
-    displayName: Publish NuGet
+    displayName: Sign Binaries and Publish NuGet
     pool:
-      vmImage: $(VmImage)
+      vmImage: Package ES Lab E
 
     steps:
       - checkout: none
+
+      - task: PkgESSetupBuild@10
+        displayName: 'XESSetupBuild'
+        inputs:
+          productName: microsoftreactnative
+          branchVersion: false
+          nugetVer: true
 
       - task: DownloadBuildArtifacts@0
         displayName: Download VersionEnvVars
@@ -208,6 +215,7 @@ jobs:
         parameters:
           publishCommitId: $(publishCommitId)
           npmVersion: $(npmVersion)
+          signMicrosoft: true
 
       - task: PublishBuildArtifacts@1
         displayName: "Publish final nuget artifacts"
