--- a/packages/@rnw-scripts/ts-config/tsconfig.json
+++ b/packages/@rnw-scripts/ts-config/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "jsx": "react-native",
+    "jsx": "react",
     "sourceMap": true,
     "declaration": true,
     "strict": true,
