Share eslint, Typescript, and just-script configs across packages (#5370)
* Share eslint and Typescript configs across packages

We create rnw-scripts packages which export a typescript config and an eslint config. We can change individual packages to import these. We pull in a newer version of esling (and add is as a devDep to all packages), letting us include eslintignore rules in the base eslintrc.

This also leads to enforcing strict mode for all Typescript projects, enabling eslint for react-native-win32, react-native-windows-init (fixing some errors and suppressing other parts that aren't clean). ES6 module behavior also changed slightly for some projects.

* Change files

* Do it for just-task too (and disable ESModule Building)

* Declare deps correctly

* Change files

* yarn api

* More Fixes

- Use Default tsc esModuleInterop Settings
- Fix IntegrationTest Typos
- Warn instead of disable react-native-win32 hook rules
- Ensure trailing newlines
- Remove dev dependency from root of repo
- Less globs
- Remove change scripts from packages since they aren't package local, won't get updated with branches, and the beachball dev dep is in the root
- Remove the repository field from private scripts since it isn't useful for internal and adds a second source of truth
- Fix a couple of trivial eslint errors that were exposed

* Fixup react-native-windows-init for TS strict in better ways

* Better tsconfig defaults

- Preserve JSX (Metro will do the right thing with it)
- Enable noImplicitReturns which isn't enabled by default by strict
- Fix error in react-native-windows-codegen that noImplicitReturns foumd

* Specify CommonJS in shared tsconfig instead of just-task

* yarn lint:fix

* Compile JSX to RN JS since Metro Seems to Not Like JSX By Default

* Do we see different E2E Behavior if we transpile JSX to React.CreateElement?

--- a/packages/@rnw-scripts/promote-release/package.json
+++ b/packages/@rnw-scripts/promote-release/package.json
@@ -2,14 +2,8 @@
   "name": "@rnw-scripts/promote-release",
   "version": "0.0.1",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:microsoft/react-native-windows.git",
-    "directory": "packages/@rnw-scripts/promote-release"
-  },
   "scripts": {
     "build": "just-scripts build",
-    "change": "beachball change",
     "clean": "just-scripts clean",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix"
@@ -23,15 +17,19 @@
     "glob": "^7.1.6",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.15",
-    "simplegit": "^1.0.2",
+    "simple-git": "^1.131.0",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/just-task": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/chalk": "^2.2.0",
     "@types/glob": "^7.1.0",
     "@types/js-yaml": "^3.12.5",
     "@types/lodash": "^4.14.157",
     "@types/yargs": "^15.0.5",
+    "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
   },
