--- a/packages/@rnw-scripts/find-repo-root/package.json
+++ b/packages/@rnw-scripts/find-repo-root/package.json
@@ -2,14 +2,8 @@
   "name": "@rnw-scripts/find-repo-root",
   "version": "0.0.1",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:microsoft/react-native-windows.git",
-    "directory": "packages/@rnw-scripts/find-repo-root"
-  },
   "scripts": {
     "build": "just-scripts build",
-    "change": "beachball change",
     "clean": "just-scripts clean",
     "lint": "just-scripts lint",
     "lint:fix": "just-scripts lint:fix"
@@ -19,7 +13,11 @@
     "find-up": "^4.1.0"
   },
   "devDependencies": {
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/just-task": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/find-up": "^4.0.0",
+    "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
   },
