--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -30,6 +30,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/jasmine": "2.8.7",
     "@types/node": "^10.14.8",
     "@types/react": "16.9.0",
@@ -42,7 +44,7 @@
     "@wdio/local-runner": "5.12.1",
     "@wdio/sync": "5.12.1",
     "appium": "1.14.1",
-    "eslint": "5.1.0",
+    "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.18.2",
