--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -17,10 +17,11 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@rnw-scripts/eslint-config": "0.0.0",
+    "@rnw-scripts/ts-config": "0.0.0",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
-    "eslint": "5.1.0",
+    "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0"
