--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -43,13 +43,14 @@
   },
   "devDependencies": {
     "@office-iss/rex-win32": "0.62.0-preview.16-tenantreactnativewin-13017.2",
+    "@rnw-scripts/eslint-config": "0.0.0",
     "@types/es6-collections": "^0.5.29",
     "@types/es6-promise": "0.0.32",
     "@types/node": "^12.11.2",
     "@types/prop-types": "15.5.1",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
-    "eslint": "5.1.0",
+    "eslint": "6.7.0",
     "flow-bin": "^0.120.1",
     "jscodeshift": "^0.6.2",
     "just-scripts": "^0.36.1",
