--- a/vnext/package.json
+++ b/vnext/package.json
@@ -44,13 +44,17 @@
   "devDependencies": {
     "@microsoft/api-documenter": "^7.3.8",
     "@microsoft/api-extractor": "^7.3.8",
+    "@react-native-community/cli-types": "^4.10.1",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/chalk": "^2.2.0",
-    "@types/es6-collections": "^0.5.29",
-    "@types/es6-promise": "0.0.32",
+    "@types/mustache": "^4.0.1",
     "@types/ora": "^3.2.0",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
+    "@types/shelljs": "^0.8.8",
+    "@types/uuid": "^8.0.0",
+    "@types/xml-parser": "^1.2.29",
+    "@types/xmldom": "^0.1.29",
     "eslint": "6.7.0",
     "eslint-plugin-prettier": "2.6.2",
     "flow-bin": "^0.120.1",
@@ -59,8 +63,8 @@
     "prettier": "1.17.0",
     "react": "16.13.0",
     "react-native": "0.0.0-56cf99a96",
-    "react-native-windows-codegen": "0.0.7",
     "react-native-platform-override": "^0.0.7",
+    "react-native-windows-codegen": "0.0.7",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
