Run Release Note Generation Script in 0.62 Branch
We added a script to generate automatic release notes, and have it being published from our master branch. New stable branches will automatically run the script, but we need to bring the change back to 0.62 to get automated release notes for it.

Note that the script itself is serviced, so we can change format, etc in master and have it affect new releases of old branches once the CI change is present.

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -52,6 +52,11 @@ jobs:
           script: npx --no-install beachball publish --branch origin/$(Build.SourceBranchName) -n $(npmAuthToken) -yes -m "applying package updates ***NO_CI***" --bump-deps  --access public
 
       - task: CmdLine@2
+        displayName: Create GitHub Release
+        inputs:
+          script: npx --ignore-existing @rnw-scripts/create-github-releases --authToken $(GITHUB_API)
+
+      - task: CmdLine@2
         displayName: Set Version Env Vars
         name: setVersionEnvVars
         inputs:
